# GraphQuery

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  ldbc_snb_order.txt  requirements.txt
.github/workflows/: build-compile.yml
DB0/GR0/: edges  index  label_map  master  properties  transactions  vertices
core/: CMakeLists.txt
core/src/: main.cpp
docs/: Doxyfile.in
graphquery/core/: CMakeLists.txt  main.cpp
graphquery/core/algorithms/: CMakeLists.txt
graphquery/core/algorithms/bfs/: CMakeLists.txt  bfs.cpp  bfs.h
graphquery/core/algorithms/cc/: CMakeLists.txt  connected_components.cpp  connected_components.h
graphquery/core/algorithms/pagerank/: CMakeLists.txt  pagerank.cpp  pagerank.h
graphquery/core/algorithms/scc/: CMakeLists.txt  scc.cpp  scc.h
graphquery/core/algorithms/sssp/: CMakeLists.txt  sssp.cpp  sssp.h
graphquery/core/algorithms/wcc/: CMakeLists.txt  wcc.cpp  wcc.h
graphquery/core/core/: main.cpp
graphquery/core/core/include/: frame.hpp  frame_log.hpp  gui.hpp  log_stdo.hpp
graphquery/core/core/src/: frame_log.cpp  gui.cpp  log_stdo.cpp
graphquery/core/db/: csr.cpp  csr.h  dlg.h  graphstorage.cpp  graphstorage.h  lib.h  storage.cpp  storage.h  system.cpp  system.h
graphquery/core/db/analytic/: algorithm.h  analytic.cpp  analytic.h  lightweight_graph.hpp  relax.h
graphquery/core/db/models/disk/dlg/: dlg.cpp  dlg.h
graphquery/core/db/models/memory/csr/: csr.h
graphquery/core/db/query/: query.cpp  query.h  statement.h
graphquery/core/db/storage/: config.h  dataset.h  dataset_ldbc.hpp  dbstorage.cpp  dbstorage.h  diskdriver.cpp  diskdriver.h  dlg.cpp  dlg.h  graph_model.h  graphmodel.h  graphstorage.cpp  graphstorage.h  loader.h  memory.h  memory_model.h  model.h
graphquery/core/db/storage/diskdriver/: CMakeLists.txt  diskdriver.cpp  diskdriver.h  memory_ref.h
graphquery/core/db/storage/models/: CMakeLists.txt
graphquery/core/db/storage/models/dlg/: CMakeLists.txt  dlg.h
graphquery/core/db/storage/models/indisk/: dlg.cpp  dlg.h
graphquery/core/db/storage/models/inmemory/: csr.cpp  csr.h
graphquery/core/db/utils/: atomic_intrinsics.h  bitset.hpp  lib.h  result.h  ring_buffer.h  ring_buffer.hpp  sliding_queue.hpp  spinlock.h  thread_pool.hpp
graphquery/core/gui/: frame.hpp  gui.cpp  gui.h  gui.hpp
graphquery/core/gui/frames/: frame_dock.cpp  frame_dock.h  frame_dock.hpp  frame_menubar.cpp  frame_menubar.h  frame_menubar.hpp  frame_output.cpp  frame_output.h  frame_output.hpp
graphquery/core/include/: gui.hpp
graphquery/core/interact/: interact.h
graphquery/core/interact/interfaces/cmd/: interact_cmd.cpp  interact_cmd.h
graphquery/core/interact/interfaces/gui/: frame.h  interact_gui.cpp  interact_gui.h
graphquery/core/interact/interfaces/gui/frames/: frame_db_analytic.cpp  frame_db_analytic.h  frame_db_query.cpp  frame_db_query.h  frame_dock.cpp  frame_dock.h  frame_graph_db.cpp  frame_graph_db.h  frame_graph_visual.cpp  frame_graph_visual.h  frame_menubar.cpp  frame_menubar.h  frame_output.cpp  frame_output.h
graphquery/core/log/: CMakeLists.txt  log.h  logger.cpp  logger.h  logger.hpp  logsystem.cpp  logsystem.h
graphquery/core/log/loggers/: log_gui.cpp  log_gui.hpp  log_stdo.cpp  log_stdo.h  log_stdo.hpp
graphquery/core/log/logsystem/: CMakeLists.txt  log.h  logsystem.cpp  logsystem.h
graphquery/core/logsystem/: CMakeLists.txt  logger.cpp  logger.hpp
graphquery/core/models/: CMakeLists.txt
graphquery/core/models/dlg/: CMakeLists.txt  dlg.cpp  dlg.h
graphquery/core/models/lpg/: CMakeLists.txt  lpg.cpp  lpg.h  transaction.cpp  transaction.h
graphquery/core/models/lpg_mmap/: CMakeLists.txt  block_file.hpp  index_file.hpp  lpg_mmap.cpp  lpg_mmap.h  transaction.cpp  transaction.h
graphquery/core/models/lpg_vector/: CMakeLists.txt  lpg_vector.cpp  lpg_vector.h  transaction.cpp  transaction.h
graphquery/core/src/: gui.cpp  main.cpp
graphquery/tests/: CMakeLists.txt  main.cpp
graphquery/tests/unit_tests/: core.cpp  def.cpp  utils.cpp
lib/models/: libdlg.dylib
scripts/: remap_ids.py  transform_ldbc_dataset.sh
